--- a/index.html
+++ b/index.html
@@ -962,8 +962,10 @@
                 }
 
                 .iframe-container {
+                    width: 100%;
                     flex-direction: column; /* Stack iframes vertically on smaller screens */
                     gap: 15px;
+                    height: 1000px;
                 }
 
                 .cta-title {
