--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         />
         <!-- Include marked.js for Markdown rendering -->
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YPEGHMQ5P"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-9YPEGHMQ5P');
+        </script>
         <style>
             :root {
                 --primary: #00bcd4;
