--- a/index.html
+++ b/index.html
@@ -582,12 +582,6 @@
                 height: 800px;
                 border: 1px solid var(--light-dark);
                 border-radius: 8px;
-                background-color: #ccc; /* Default light background */
-            }
-
-            /* Style for README iframe: Dark background handled by srcdoc */
-            .result-preview-iframe-readme {
-                background-color: #333; /* Fallback background */
             }
 
             .share-button-container {
@@ -1305,7 +1299,7 @@
                 </div>
                 <p style="text-align: center; margin-top: 20px; color: var(--text-muted)">
                     Previews update after each successful iteration. Interaction with the HTML
-                    preview is enabled. README preview renders Markdown content.
+                    preview is enabled.
                 </p>
             </div>
         </section>
