--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://autovibe.dev/" />
-        <meta property="og:image" content="https://autovibe.dev/og-image.png" />
+        <meta property="og:image" content="https://autovibe.dev/image.png" />
         <!-- Make sure this image exists -->
         <meta property="og:site_name" content="autovibe.dev" />
 
@@ -41,15 +41,13 @@
             name="twitter:description"
             content="Run thousands of AI iterations in containerized loops using your API key to generate code, content, and creative solutions."
         />
-        <meta name="twitter:image" content="https://autovibe.dev/og-image.png" />
-        <!-- Make sure this image exists -->
-        <!-- Optional: <meta name="twitter:site" content="@YourTwitterHandle"> -->
-        <!-- Optional: <meta name="twitter:creator" content="@CreatorTwitterHandle"> -->
+        <meta name="twitter:image" content="https://autovibe.dev/image.png" />
 
-        <!-- Favicon (optional but recommended) -->
-        <!-- <link rel="icon" href="/favicon.ico" sizes="any"> -->
-        <!-- <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
-        <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
+        <meta name="twitter:site" content="@MangaTVShop" />
+        <meta name="twitter:creator" content="@MangaTVShop" />
+
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -62,7 +60,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="/site.webmanifest" />
         <!-- Include marked.js for Markdown rendering -->
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <!-- Google tag (gtag.js) -->
