--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
             <div class="container">
                 <div class="header-inner">
                     <a href="#" class="logo"
-                        ><i class="fas fa-brain" aria-hidden="true"></i>autovibe.dev</a
+                        ><i class="fas fa-brain" aria-hidden="true"></i>AutoVibe</a
                     >
                     <button
                         class="mobile-menu-btn"
